add campus to course assignments
